<resources>
    <string name="app_name">NOTIFY</string>

    <string name="hello_world">NOTIFY</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="string_enter_college_id">Enter your college_id</string>
    <string name="string_enter_category">Category(Any one)</string>
    <string name="button_register">Register</string>
    <string name="title_activity_topics">Topics</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_display">Display</string>
    <string name="title_activity_dashboard2">Dashboard2</string>
    <string name="title_activity_homescreen2">Homescreen2</string>
</resources>